# my_rust_app

./: .gitignore  CLAUDE.md  Cargo.toml  mise.toml  request.http
migrations/: 001_create_books_table.sql
src/: context.rs  flash_message.rs  handler.rs  lib.rs  main.rs  presentation.rs  router.rs
src/features/: book.rs  shared.rs  user.rs
src/features/book/: infra.rs  model.rs  usecase.rs
src/features/book/infra/: on_memory.rs  sqlite.rs
src/infra/: book.rs
src/infra/book/: on_memory.rs
src/presentation/: book.rs  shared.rs
src/presentation/book/: handler.rs  pages.rs  port.rs
src/presentation/book/http/: response.rs
src/presentation/book/pages/: command.rs  create.rs  delete.rs  list.rs  query.rs  update.rs
src/router/: book.rs  books.rs  home.rs  html.rs  web.rs
src/router/book/: create.rs  delete.rs  list.rs  model.rs  update.rs
