[package]
name = "my_rust_app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
